# xarm_ros

./: .gitignore  .gitmodules  ReadMe.md  ReadMe_cn.md  ReadMe_lite6.md  ReadMe_others.md  xarm_with_gripper.urdf
examples/: ReadMe.md  package.xml
examples/lite6_vacuum_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
examples/lite6_vacuum_gripper_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
examples/lite6_vacuum_gripper_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  lite6_vacuum_gripper_moveit_controller_manager.launch.xml  lite6_vacuum_gripper_moveit_gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_rviz_common.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  realMove_exec.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
examples/multi_xarm5/: CMakeLists.txt  package.xml
examples/multi_xarm5/launch/: two_real_xarm5.launch  two_real_xarm6.launch  two_real_xarm7.launch  two_sim_xarm5.launch  two_sim_xarm6.launch
examples/run_recorded_traj/: CMakeLists.txt  package.xml
examples/run_recorded_traj/launch/: run_test_two_ns.launch  two_xarm_bringup.launch
examples/xarm5_vacuum_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
examples/xarm6_vacuum_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
examples/xarm7_redundancy_res/: CMakeLists.txt  ReadMe.md  package.xml  requirements.txt
examples/xarm7_vacuum_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
xarm_api/: CMakeLists.txt  ReadMe.md  package.xml
xarm_api/include/: visibility_control.hpp  xarm_driver.h  xarm_msgs.h  xarm_ros_client.h
xarm_api/scripts/: blended_motion_test.py  servo_cartesian_test.py
xarm_api/src/: xarm_driver.cpp  xarm_driver_node.cpp  xarm_ros_client.cpp
xarm_api/test/: example1_report_norm.cc  example1_report_norm.cpp  move_test.cpp  servo_cartesian_test.cpp  test_tool_modbus.cpp  test_velo_move.cpp  test_xarm_cgpio_states.cpp  test_xarm_ros_client.cpp  test_xarm_states.cpp  test_xarm_velo_move.cpp  velo_move_test.cpp
xarm_bringup/: CMakeLists.txt  package.xml
xarm_bringup/launch/: dual_xarm6_server.launch  lite6_server.launch  uf850_server.launch  xarm5_server.launch  xarm6_group_server.launch  xarm6_server.launch  xarm7_server.launch  xarm_driver_common.launch  xarm_robot.launch
xarm_controller/: CMakeLists.txt  package.xml  xarm_hw_plugin.xml
xarm_controller/config/: dual_gripper_traj_controller.yaml  dual_lite6_traj_controller.yaml  dual_uf850_position_controllers.yaml  dual_uf850_traj_controller.yaml  dual_xarm5_position_controllers.yaml  dual_xarm5_traj_controller.yaml  dual_xarm6_position_controllers.yaml  dual_xarm6_traj_controller.yaml  dual_xarm7_position_controllers.yaml  dual_xarm7_traj_controller.yaml  gripper_gazebo_ros_control.yaml  gripper_traj_controller.yaml  lite6_traj_controller.yaml  robotiq_gripper_traj_controller.yaml  uf850_traj_controller.yaml  xarm5_position_controllers.yaml  xarm5_traj_controller.yaml  xarm6_position_controllers.yaml  xarm6_traj_controller.yaml  xarm7_effort_controllers.yaml  xarm7_position_controllers.yaml  xarm7_traj_controller.yaml  xarm_gripper_controller.yaml  xarm_robotiq_controller.yaml
xarm_controller/exec/: kill_ros_gazebo
xarm_controller/include/: xarm_combined_hw.h  xarm_hw.h
xarm_controller/launch/: _robot_control.launch  dual_xarm6_control.launch  lite6_control.launch  uf850_control.launch  xarm5_control.launch  xarm6_control.launch  xarm6_robotiq_control.launch  xarm7_control.launch
xarm_controller/src/: sample_motion.cpp  xarm_combined_control_node.cpp  xarm_combined_hw.cpp  xarm_control_node.cpp  xarm_hardware_interface.cpp  xarm_hw.cpp
xarm_gripper/: CMakeLists.txt  package.xml
xarm_gripper/action/: Move.action
xarm_gripper/config/: joint_names_xarm_gripper.yaml
xarm_gripper/launch/: display.rviz  gazebo.launch  gripper_rviz_display.launch
xarm_gripper/meshes/: base_link.STL
xarm_gripper/src/: gripper_action_server.cpp  gripper_as_gazebo.cpp  gripper_client.cpp
xarm_gripper/urdf/: xarm_gripper.gazebo.xacro  xarm_gripper.urdf.xacro  xarm_gripper.xacro  xarm_gripper_model.xacro
xarm_moveit_servo/: CMakeLists.txt  package.xml
xarm_moveit_servo/config/: moveit_servo_config.yaml
xarm_moveit_servo/launch/: robot_moveit_servo_realmove.launch  xarm_moveit_servo_realmove.launch
xarm_moveit_servo/src/: xarm_joystick_input.cpp  xarm_keyboard_input.cpp
xarm_msgs/: CMakeLists.txt  ReadMe.md  package.xml
xarm_msgs/msg/: CIOState.msg  IOState.msg  RobotMsg.msg  VeloMoveMsg.msg
xarm_msgs/srv/: ClearErr.srv  ConfigToolModbus.srv  FtCaliLoad.srv  FtIdenLoad.srv  GetAnalogIO.srv  GetControllerDigitalIO.srv  GetDigitalIO.srv  GetErr.srv  GetFloat32List.srv  GetInt32.srv  GetSetModbusData.srv  GripperConfig.srv  GripperMove.srv  GripperState.srv  Move.srv  MoveAxisAngle.srv  MoveVelo.srv  MoveVelocity.srv  PlayTraj.srv  SetAxis.srv  SetControllerAnalogIO.srv  SetDigitalIO.srv  SetFloat32.srv  SetInt16.srv  SetLoad.srv  SetModbusTimeout.srv  SetMultipleInts.srv  SetString.srv  SetToolModbus.srv  TCPOffset.srv  VacuumGripperCtrl.srv
xarm_planner/: CMakeLists.txt  ReadMe.md  ReadMe_cn.md  package.xml
xarm_planner/launch/: moveit_real_arm_configurations.launch  moveit_sim_configurations.launch  planner.rviz  robot_planner_fake.launch  robot_planner_realmove.launch  xarm_planner_realHW.launch  xarm_planner_rviz_sim.launch
xarm_planner/src/: planner_test_findobj2d.cpp  xarm_gripper_planner.cpp  xarm_simple_planner.cpp  xarm_simple_planner_test.cpp  xarm_simple_planner_test2.cpp
xarm_planner/srv/: exec_plan.srv  joint_plan.srv  pose_plan.srv
xarm_sdk/: CMakeLists.txt  package.xml
xarm_vision/d435i_xarm_setup/: CMakeLists.txt  package.xml
(+977 files in other folders)
