<?xml version="1.0"?>
<package format="2">
  <name>examples</name>
  <version>0.0.0</version>
  <description>The examples package</description>

  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
