<?xml version="1.0"?>
<package format="2">
  <name>xarm_bringup</name>
  <version>0.0.0</version>
  <description>The xarm_bringup package</description>

  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_export_depend>xarm_api</build_export_depend>
  
  <exec_depend>xarm_api</exec_depend>
  
</package>
