<?xml version="1.0"?>
<package format="2">
  <name>xarm_controller</name>
  <version>0.0.0</version>
  <description>The xarm_controller package</description>
  <maintainer email="jason@ufactory.cc">jason</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>xarm_api</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xarm_api</exec_depend>

</package>
