<?xml version="1.0"?>
<package format="2">
  <name>xarm_controller</name>
  <version>0.0.0</version>
  <description>The xarm_controller package</description>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>std_msgs</depend>
  <depend>xarm_api</depend>
  <depend>xarm_msgs</depend>

  <build_depend>combined_robot_hw</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <build_export_depend>combined_robot_hw</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>

  <exec_depend>combined_robot_hw</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
      <hardware_interface plugin="${prefix}/xarm_hw_plugin.xml"/>
  </export>
</package>
