<package>
  <name>xarm_gripper</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for xarm_gripper</p>
    <p>This package contains configuration data, 3D models and launch files
for xarm_gripper robot</p>
  </description>
  <author>jason_peng</author>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>xarm_api</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>xarm_api</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>