<?xml version="1.0"?>
<package format="2">
  <name>xarm_gripper</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for xarm_gripper</p>
    <p>This package contains configuration data, 3D models and launch files
for xarm_gripper robot</p>
  </description>
  <author>jason_peng</author>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_runtime</depend>
  <depend>xarm_api</depend>
  <depend>xarm_msgs</depend>

  <build_depend>roslaunch</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo</exec_depend>
  
<export>
    <architecture_independent />
  </export>
</package>
