<?xml version="1.0"?>
<package format="2">
  <name>multi_xarm5</name>
  <version>0.0.0</version>
  <description>The multi_xarm5 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jason@ufactory.cc">jason</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>ros_control</exec_depend>
</package>
