<?xml version="1.0"?>
<package format="2">
  <name>d435i_xarm_setup</name>
  <version>0.0.0</version>
  <description>The d435i_xarm_setup package</description>

  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>

  <license>BSD</license>
  
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>object_recognition_msgs</depend>
  <depend>xarm_api</depend>
  <depend>xarm_planner</depend>
  <depend>xarm_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
